--- a/pages/email.html
+++ b/pages/email.html
@@ -20,7 +20,7 @@
                 <div class="col-md-4">
                     <div class="peace">
                         <i class="fas fa-bars" id="openSidebar"></i>
-                        <h4>Toasts</h4>
+                        <h4>Email</h4>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -95,7 +95,7 @@
                     </li>
                     <li>
                         <i class="fas fa-bolt"></i>
-                        <a href="#">Apps</a>
+                        <a href="#" class="active">Apps</a>
                         <div class="myAccordion">
                             <ul>
                                 <li>
@@ -115,7 +115,7 @@
                     </li>
                     <li>
                         <i class="fas fa-bolt"></i>
-                        <a href="#" class="active">Components</a>
+                        <a href="#">Components</a>
                         <div class="myAccordion">
                             <ul>
                                 <li>
@@ -208,118 +208,181 @@
     </div>
     <!-- End SideBar -->
 
-    <!-- Start Toasts -->
+    <!-- Start Email -->
 
-    <section style="padding: 0 0 40px 0;">
+    <section class="email-section">
         <div class="container">
-            <h5>Basic</h5>
-            <p>
-                To encourage extensible and predictable toasts, we recommend a header and body.
-                Toast headers use <code>display: flex</code> , allowing easy alignment of content thanks to our margin and flexbox utilities.
-            </p>
-            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="toast-header">
-                  <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                  <strong class="me-auto">Bootstrap</strong>
-                  <small>11 mins ago</small>
-                  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-                <div class="toast-body">
-                  Hello, world! This is a toast message.
-                </div>
-            </div>
-            <h5>Live Toast</h5>
-            <p>
-                Click the button below to show a toast (positioned with our utilities in the lower right corner) that has been hidden by default.
-            </p>
-            <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
-    
-            <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-            <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="toast-header">
-                <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                <strong class="me-auto">Bootstrap</strong>
-                <small>11 mins ago</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-                <div class="toast-body">
-                Hello, world! This is a toast message.
-                </div>
-            </div>
-            </div>
-            <h5>Translucent</h5>
-            <p>Toasts are slightly translucent to blend in with what’s below them.</p>
-            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="toast-header">
-                  <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                  <strong class="me-auto">Bootstrap</strong>
-                  <small class="text-muted">11 mins ago</small>
-                  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-                <div class="toast-body">
-                  Hello, world! This is a toast message.
-                </div>
-              </div>
-              <h5>Stacking</h5>
-              <p>
-                You can stack toasts by wrapping them in a toast container, which will vertically add some spacing.
-              </p>
-              <div class="toast-container">
-                <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                  <div class="toast-header">
-                    <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                    <strong class="me-auto">Bootstrap</strong>
-                    <small class="text-muted">just now</small>
-                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                  </div>
-                  <div class="toast-body">
-                    See? Just like this.
-                  </div>
-                </div>
-              
-                <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                  <div class="toast-header">
-                    <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                    <strong class="me-auto">Bootstrap</strong>
-                    <small class="text-muted">2 seconds ago</small>
-                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                  </div>
-                  <div class="toast-body">
-                    Heads up, toasts will stack automatically
-                  </div>
-                </div>
-              </div>
-              <h5>Custom content</h5>
-              <p>
-                Custom content
-                Customize your toasts by removing sub-components, tweaking them with utilities, or by adding your own markup. Here we’ve created a simpler toast by removing the default
-                <code>.toast-header</code> , adding a custom hide icon from Bootstrap Icons, and using some flexbox utilities to adjust the layout.
-              </p>
-              <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="d-flex">
-                  <div class="toast-body">
-                  Hello, world! This is a toast message.
-                 </div>
-                  <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-              </div>
-                <h5>Color schemes</h5>
-                <p>
-                    Building on the above example, you can create different toast color schemes with our color and background utilities. Here we’ve added .bg-primary and .text-white to the
-                    <code>.toast</code>, and then added <code>.btn-close-white</code> to our close button. For a crisp edge, we remove the default border with <code>.border-0.</code>
-                </p>
-                <div class="toast align-items-center text-white bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="d-flex">
-                      <div class="toast-body">
-                        Hello, world! This is a toast message.
-                      </div>
-                      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="emails">
+                        <div class="email active">
+                            <div class="email-author">
+                                <img src="../images/avatar3.jpeg" alt="" width="35px" height="35px">
+                                <span class="author-name">Lisa Lansford</span>
+                                <span class="time">5m ago</span>
+                            </div>
+                            <div class="email-info">
+                                <span class="email-subject">
+                                    sit amet semper ante efficitur et
+                                </span>
+                                <span class="email-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                                </span>
+                            </div>
+                        </div>
+                        <div class="email">
+                            <div class="email-author">
+                                <img src="../images/avatar3.jpeg" alt="" width="35px" height="35px">
+                                <span class="author-name">Lisa Lansford</span>
+                                <span class="time">5m ago</span>
+                            </div>
+                            <div class="email-info">
+                                <span class="email-subject">
+                                    sit amet semper ante efficitur et
+                                </span>
+                                <span class="email-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                                </span>
+                            </div>
+                        </div>
+                        <div class="email">
+                            <div class="email-author">
+                                <img src="../images/avatar3.jpeg" alt="" width="35px" height="35px">
+                                <span class="author-name">Lisa Lansford</span>
+                                <span class="time">5m ago</span>
+                            </div>
+                            <div class="email-info">
+                                <span class="email-subject">
+                                    sit amet semper ante efficitur et
+                                </span>
+                                <span class="email-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                                </span>
+                            </div>
+                        </div>
+                        <div class="email">
+                            <div class="email-author">
+                                <img src="../images/avatar3.jpeg" alt="" width="35px" height="35px">
+                                <span class="author-name">Lisa Lansford</span>
+                                <span class="time">5m ago</span>
+                            </div>
+                            <div class="email-info">
+                                <span class="email-subject">
+                                    sit amet semper ante efficitur et
+                                </span>
+                                <span class="email-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                                </span>
+                            </div>
+                        </div>
+                        <div class="email">
+                            <div class="email-author">
+                                <img src="../images/avatar3.jpeg" alt="" width="35px" height="35px">
+                                <span class="author-name">Lisa Lansford</span>
+                                <span class="time">5m ago</span>
+                            </div>
+                            <div class="email-info">
+                                <span class="email-subject">
+                                    sit amet semper ante efficitur et
+                                </span>
+                                <span class="email-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                                </span>
+                            </div>
+                        </div>
+                        <div class="email">
+                            <div class="email-author">
+                                <img src="../images/avatar3.jpeg" alt="" width="35px" height="35px">
+                                <span class="author-name">Lisa Lansford</span>
+                                <span class="time">5m ago</span>
+                            </div>
+                            <div class="email-info">
+                                <span class="email-subject">
+                                    sit amet semper ante efficitur et
+                                </span>
+                                <span class="email-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                                </span>
+                            </div>
+                        </div>
+                        <div class="email">
+                            <div class="email-author">
+                                <img src="../images/avatar3.jpeg" alt="" width="35px" height="35px">
+                                <span class="author-name">Lisa Lansford</span>
+                                <span class="time">5m ago</span>
+                            </div>
+                            <div class="email-info">
+                                <span class="email-subject">
+                                    sit amet semper ante efficitur et
+                                </span>
+                                <span class="email-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-8">
+                    <div class="info">
+                        <div class="title">
+                            <div class="row">
+                                <div class="col-md-7">
+                                    <h5>Lorem ipsum dolor sit amet</h5>
+                                </div>
+                                <div class="col-md-5 text-end">
+                                    <button class="btn btn-light">Replay</button>
+                                    <button class="btn btn-light">Forward</button>
+                                    <button class="btn btn-danger">Delete</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="person">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <img src="../images/avatar3.jpeg" alt="" width="50px" height="50px" style="display: inline-block;">
+                                    <p style="display: inline-block;">Kenny Highland</p>
+                                    <span style="display: block;color:#666">kenny.high@gmail.com</span>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="date text-end">
+                                        <span>21 July, 18:01</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="content">
+                        <p>
+                            Dear Sir/Madam, <br>
+                            <br>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut ante id elit molestie ornare. Pellentesque porttitor facilisis risus, sit amet semper ante efficitur et. Etiam quis rutrum leo, vitae posuere augue. Donec odio leo, dapibus id sollicitudin vel, luctus sit amet justo. Aenean cursus, tellus ut consectetur commodo, est dolor fringilla mauris, nec tristique magna orci in diam. Cras eget libero sit amet felis tincidunt mattis.
+                            <br>
+                            <br>
+                            Waiting your reply ASAP, <br>
+                            Thanks in advance.
+                            <br>
+                            <br>
+                            2 Attachment <span>Download all</span>
+                        </p>
+                        <img src="../images/card1.jpeg" alt="" width="200px" height="130px">
+                        <img src="../images/card2.jpeg" alt="" width="200px" height="130px">
+                        <!-- <div class="img-info">
+                            <h5>Attachment.jpg</h5>
+                            <span>444KB</span>
+                        </div>
+                        <div class="img-info">
+                            <h5>Attachment.jpg</h5>
+                            <span>444KB</span>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+            <hr>
         </div>
     </section>
 
-    <!-- End Toasts -->
+    <!-- End Email -->
 
     <!-- JS Scripts -->
     <script src="../js/aos.js"></script>
