--- a/pages/file_manger.html
+++ b/pages/file_manger.html
@@ -20,7 +20,7 @@
                 <div class="col-md-4">
                     <div class="peace">
                         <i class="fas fa-bars" id="openSidebar"></i>
-                        <h4>Toasts</h4>
+                        <h4>File Manger</h4>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -208,118 +208,189 @@
     </div>
     <!-- End SideBar -->
 
-    <!-- Start Toasts -->
+    <!-- Start Filemanger Page -->
+    <section class="file_manger">
+        <div class="row">
+            <!-- Start File Manger SideBar -->
+            <div class="fileMang-sideBar col-md-2">
+                <div class="upload-btn">
+                    <button>Upload File</button>
+                </div>
+                <div class="myDrive">
+                    <h5>My Drive</h5>
+                    <ul>
+                        <li><i class="far fa-folder"></i>All Files</li>
+                        <li><i class="fas fa-clock"></i>Recent</li>
+                        <li><i class="fas fa-tablet-alt"></i>My Devices</li>
+                        <li><i class="far fa-grin-stars"></i>Important</li>
+                        <li><i class="far fa-trash-alt"></i>Deleted</li>
+                    </ul>
+                </div>
+                <div class="labels">
+                    <h5>Labels</h5>
+                    <ul>
+                        <li>Work</li>
+                        <li>Personal</li>
+                        <li>Family</li>
+                        <li>Friends</li>
+                    </ul>
+                </div>
+                <div class="storge">
+                    <h5>Storge</h5>
+                    <p>60GB used of 100GB</p>
+                </div>
+            </div>
+            <!-- Start File Manger Content -->
+            <div class="fileMang-section col-md-10">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file-csv"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file-invoice"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file-signature"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
 
-    <section style="padding: 0 0 40px 0;">
-        <div class="container">
-            <h5>Basic</h5>
-            <p>
-                To encourage extensible and predictable toasts, we recommend a header and body.
-                Toast headers use <code>display: flex</code> , allowing easy alignment of content thanks to our margin and flexbox utilities.
-            </p>
-            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="toast-header">
-                  <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                  <strong class="me-auto">Bootstrap</strong>
-                  <small>11 mins ago</small>
-                  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-                <div class="toast-body">
-                  Hello, world! This is a toast message.
-                </div>
-            </div>
-            <h5>Live Toast</h5>
-            <p>
-                Click the button below to show a toast (positioned with our utilities in the lower right corner) that has been hidden by default.
-            </p>
-            <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
-    
-            <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-            <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="toast-header">
-                <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                <strong class="me-auto">Bootstrap</strong>
-                <small>11 mins ago</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-                <div class="toast-body">
-                Hello, world! This is a toast message.
-                </div>
-            </div>
-            </div>
-            <h5>Translucent</h5>
-            <p>Toasts are slightly translucent to blend in with what’s below them.</p>
-            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="toast-header">
-                  <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                  <strong class="me-auto">Bootstrap</strong>
-                  <small class="text-muted">11 mins ago</small>
-                  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-                <div class="toast-body">
-                  Hello, world! This is a toast message.
-                </div>
-              </div>
-              <h5>Stacking</h5>
-              <p>
-                You can stack toasts by wrapping them in a toast container, which will vertically add some spacing.
-              </p>
-              <div class="toast-container">
-                <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                  <div class="toast-header">
-                    <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                    <strong class="me-auto">Bootstrap</strong>
-                    <small class="text-muted">just now</small>
-                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                  </div>
-                  <div class="toast-body">
-                    See? Just like this.
-                  </div>
-                </div>
-              
-                <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                  <div class="toast-header">
-                    <img src="http://placehold.it/100/fff" class="rounded me-2" alt="...">
-                    <strong class="me-auto">Bootstrap</strong>
-                    <small class="text-muted">2 seconds ago</small>
-                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                  </div>
-                  <div class="toast-body">
-                    Heads up, toasts will stack automatically
-                  </div>
-                </div>
-              </div>
-              <h5>Custom content</h5>
-              <p>
-                Custom content
-                Customize your toasts by removing sub-components, tweaking them with utilities, or by adding your own markup. Here we’ve created a simpler toast by removing the default
-                <code>.toast-header</code> , adding a custom hide icon from Bootstrap Icons, and using some flexbox utilities to adjust the layout.
-              </p>
-              <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="d-flex">
-                  <div class="toast-body">
-                  Hello, world! This is a toast message.
-                 </div>
-                  <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-              </div>
-                <h5>Color schemes</h5>
-                <p>
-                    Building on the above example, you can create different toast color schemes with our color and background utilities. Here we’ve added .bg-primary and .text-white to the
-                    <code>.toast</code>, and then added <code>.btn-close-white</code> to our close button. For a crisp edge, we remove the default border with <code>.border-0.</code>
-                </p>
-                <div class="toast align-items-center text-white bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="d-flex">
-                      <div class="toast-body">
-                        Hello, world! This is a toast message.
-                      </div>
-                      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                        <!-- Folders -->
+                        <h4>Folders</h4>
+
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="icon">
+                                    <i class="far fa-folder"></i>
+                                </div>
+                                <div class="info">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="icon">
+                                    <i class="far fa-folder"></i>
+                                </div>
+                                <div class="info">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Files -->
+                        <h4>Files</h4>
+
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file-csv"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file-invoice"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file-signature"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file-signature"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="peace">
+                                <div class="file">
+                                    <i class="fas fa-file"></i>
+                                </div>
+                                <div class="desc">
+                                    <h6>IMG_08719.jpgb</h6>
+                                    <span>657.9k</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </div>
         </div>
     </section>
 
-    <!-- End Toasts -->
+    <!-- End Social -->
 
     <!-- JS Scripts -->
     <script src="../js/aos.js"></script>
