--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/perfect-scrollbar.css">
     <link rel="stylesheet" href="css/c3.css">
     <link rel="stylesheet" href="css/next-sidebar.css">
-    <link rel="stylesheet" href="css/testStyle.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
@@ -321,7 +322,7 @@
     <section class="analyst">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="statistic">
                         <div class="row">
                             <div class="col-md-8">
@@ -338,7 +339,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="statistic">
                         <div class="row">
                             <div class="col-md-8">
@@ -355,7 +356,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="statistic">
                         <div class="row">
                             <div class="col-md-8">
@@ -372,7 +373,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="statistic">
                         <div class="row">
                             <div class="col-md-8">
@@ -432,7 +433,7 @@
         <div class="container">
             <div class="row">
                 <!-- Start Email -->
-                <div class="col-md-4 email-statis">
+                <div class="col-md-12 col-lg-4 email-statis">
                     <div class="card">
                         <div class="card-body">
                             <div class="card-title">
@@ -447,7 +448,7 @@
                 </div>
                 <!-- End Email -->
                 <!-- Start Posts -->
-                <div class="col-md-4 post-statis">
+                <div class="col-md-12 col-lg-4 post-statis">
                     <div class="card">
                         <div class="card-body">
                             <div class="card-title">
@@ -533,7 +534,7 @@
                 </div>
                 <!-- End Posts -->
                 <!-- Start Items -->
-                <div class="col-md-4 item-statis">
+                <div class="col-md-12 col-lg-4 item-statis">
                     <div class="card">
                         <div class="card-body">
                             <div class="card-title">
@@ -623,7 +624,7 @@
             <!-- Start New Row -->
             <div class="row">
                 <!-- Start Transactions -->
-                <div class="col-md-4 transactions">
+                <div class="col-md-12 col-lg-4 transactions">
                     <div class="card">
                         <div class="card-body">
                             <div class="card-title">
@@ -700,7 +701,7 @@
                 </div>
                 <!-- End Transactions -->
                 <!-- Start Advanced Security -->
-                <div class="col-md-4">
+                <div class="col-md-12 col-lg-4">
                     <div class="card">
                         <div class="card-body">
                             <div class="desc text-center">
@@ -711,7 +712,7 @@
                 </div>
                 <!-- End Advanced Security -->
                 <!-- Start Sellers -->
-                <div class="col-md-4 sellers">
+                <div class="col-md-12 col-lg-4 sellers">
                     <div class="card">
                         <div class="card-body">
                             <div class="card-title">
