--- a/pages/plugins/mixitup.html
+++ b/pages/plugins/mixitup.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="../../css/bootstrap.css">
     <link rel="stylesheet" href="../../css/perfect-scrollbar.css">
     <link rel="stylesheet" href="../../css/next-sidebar.css">
-    <link rel="stylesheet" href="../../css/testStyle.css">
-    <title>Mix It up</title>
+    <link rel="stylesheet" href="../../css/style.css">
+    <title>Ecommerce Dashboard</title>
 </head>
 <body class="app">
 
